syntax = "proto3";

package CatalogIntegrationEvents;

/* >>
import "google/api/annotations.proto";
<< */

option csharp_namespace="Microsoft.eShopOnContainers.Services.Catalog.API.IntegrationEvents.ProtoEvents";

message ConfirmedOrderStockItemProto {
  int32 product_id = 1;
  bool has_stock = 2;
}

message OrderStockRejectedIntegrationEventProto {
  int32 order_id = 1;
  repeated ConfirmedOrderStockItemProto order_stock_items = 2;
}
